[package]
name = "lagoon"
version = "0.1.0"
authors = ["sourcepirate <E0267819@u.nus.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
jsonrpc-tcp-server = "14.2.0"
jsonrpc-core = "14.2.0"
jsonrpc-derive = "14.2.1"
bit-vec = "0.6.2"
fasthash = "0.4.0"

[features]
16 = []