[package]
name = "lagoon"
version = "0.1.0"
authors = ["sourcepirate <E0267819@u.nus.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.6"
jsonrpc-tcp-server = "15.1.0"
jsonrpc-core = "15.1.0"
jsonrpc-derive = "15.1.0"
bit-vec = "0.6.2"
fasthash = "0.4.0"
log = "0.4.11"
env_logger = "0.7.1"

[features]
16 = []