[package]
name = "lagoon"
version = "0.1.0"
authors = ["sourcepirate <E0267819@u.nus.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.6"
jsonrpc-tcp-server = "15.1.0"
jsonrpc-core = "15.1.0"
jsonrpc-derive = "15.1.0"
bit-vec = "0.6.2"
fasthash = "0.4.0"
log = "0.4.11"
env_logger = "0.8.1"
structopt = "0.3"
jsonrpc-lite = "0.5.0"
serde_json = "1.0.59"

[features]
16 = []